# tree-sitter-wolfram

./: .eslintrc.js  Cargo.toml  README.md  binding.gyp  grammar.js  package.json  pnpm-lock.yaml  tsconfig.json  types.d.ts
.github/workflows/: ci.yml
bindings/node/: binding.cc  index.js
bindings/rust/: README.md  build.rs  lib.rs
corpus/: alternatives.txt  apply.txt  blank.txt  comment.txt  function.txt  number.txt  part.txt  plus_positive.txt  rule.txt  symbol.txt  symbol_placement.txt  whitespace.txt
corpus_todo/: compound_expression.txt
examples/: ex1.wl  ex2.wl
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
