[package]
name = "tree-sitter-wolfram"
description = "Wolfram Language grammar for the tree-sitter parsing library"
version = "0.1.1"
authors = ["Luma <world@luma.email>"]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "wolfram", "mathematica"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/LumaKernel/tree-sitter-wolfram"
edition = "2018"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust",
  "grammar.js",
  "src",
  "queries"
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">= 0.19, < 0.21"

[build-dependencies]
cc = "1.0"
